apps/routers/talos-related-routes/blog-https/blog-teamhephy-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blog-teamhephy
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`blog.teamhephy.info`)
    services:
    - kind: Service
      name: blog-teamhephy
      namespace: traefik-staging
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: blog-teamhephy
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`blog.teamhephy.info`)
    services:
    - name: blog-teamhephy
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
